--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,11 @@
-
+.App{
+    display: flex;
+    .users{
+        width: 50%;
+        background-color: rosybrown;
+    }
+    .posts{
+        width: 50%;
+        background-color: blue;
+    }
+}
